--- a/style.css
+++ b/style.css
@@ -15,3 +15,68 @@ header > h1 {
     text-align: center;
     font-family: 'Times New Roman', Times, serif, sans-serif;
 }
+
+.score-board {
+margin: 20px auto;
+border: 3px solid white;
+border-radius: 4px;
+text-align: center;
+width: 200px;
+color: white;
+font-size: 46px;
+padding: 15px 20px;
+position: relative;
+}
+
+.badge {
+    background: #E25840;
+    color: white;
+    font-size: 14px;
+    padding: 2px 10px;
+    font-family: 'Times New Roman', Times, serif, sans-serif;
+}
+
+#user-label {
+    position: absolute;
+    top: 30px;
+    left: -25px;
+
+}
+
+
+#computer-label {
+    position: absolute;
+    top: 30px;
+    right: -30px;
+
+}
+
+.result {
+    font-size: 40px;
+    color: white;
+}
+
+.result > p{
+    text-align: center;
+    font-weight: bold;
+    font-family: Asap, sans-serif;
+}
+
+.choices {
+    margin: 50px 0;
+    text-align: center;
+}
+
+.choice {
+    border: 4px solid white;
+    border-radius: 50px;
+    margin: 0 20px;
+    padding: 10px;
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+
+.choice:hover {
+    cursor: pointer;
+    background: #24272E;
+}
