--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
 header {
     background: white;
 }
+
+
+
+
+
 header > h1 {
     color: #25272E;
     text-align: center;
@@ -87,4 +92,19 @@ position: relative;
     font-family: Asap, sans-serif;
     font-weight: bold;
     font-size: 20px;
+}
+
+.green-glow {
+    border: 4px solid #4dcc7d;
+    box-shadow: 0 0 10px #31b43a;
+}
+
+.red-glow {
+    border: 4px solid #fc121b;
+    box-shadow: 0 0 10px #d01115;
+}
+
+.gray-glow {
+    border: 4px solid #464647;
+    box-shadow: 0 0 10px #25292b;
 }
